# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE X.X.X - XXX

  From Luca Falavigna:

    - Fix typos in the man page.

  From Steven Knight:

    - Make the messages for Configure checks of compilers consistent.



RELEASE 1.2.0.d20100117 - Sun, 17 Jan 2010 14:26:59 -0800  

  From Jim Randall:
    - Fixed temp filename race condition on Windows with long cmd lines.

  From David Cournapeau:
    - Fixed tryRun when sconf directory is in a variant dir.
    - Do not add -fPIC for ifort tool on non-posix platforms (darwin and
      windows).
    - Fix bug 2294 (spurious CheckCC failures).
    - Fix scons bootstrap process on windows 64 (wrong wininst name)

  From William Deegan:
    - Final merge from vs_revamp branch to main

    - Added definition and usage of HOST_OS, HOST_ARCH, TARGET_OS, 
      TARGET_ARCH, currently only defined/used by Visual Studio
      Compilers. This will be rolled out to other platforms/tools
      in the future.

    - Add check for python >= 3.0.0 and exit gracefully.
      For 1.3 python >= 1.5.2 and < 3.0.0 are supported

    - Fix bug 1944 - Handle non-existent .i file in swig emitter, previously
      it would crash with an IOError exception. Now it will try to make an
      educated guess on the module name based on the filename.

  From Lukas Erlinghagen:

    - Have AddOption() remove variables from the list of
      seen-but-unknown variables (which are reported later).

    - An option name and aliases can now be specified as a tuple.

  From Hartmut Goebel:

    - Textfile builder.

  From Jared Grubb:

    - use "is/is not" in comparisons with None instead of "==" or "!=".

  From Jim Hunziker:

    - Avoid adding -gphobos to a command line multiple times
      when initializing use of the DMD compiler.
  
  From Jason Kenney:

    - Sugguested HOST/TARGET OS/ARCH separation.

  From Steven Knight:
