@@ -18,6 +18,13 @@ RELEASE X.X.X - XXX
 
     - Make the messages for Configure checks of compilers consistent.
 
+  From Rob Managan:
+
+    - Update tex builder to handle the case where a \input{foo}
+      command tries to work with a directory named foo instead of the
+      file foo.tex. The builder now ignores a directory and continues
+      searching to find the correct file. Thanks to Lennart Sauerbeck
+      for the test case and initial patch
 
 
 RELEASE 1.2.0.d20100117 - Sun, 17 Jan 2010 14:26:59 -0800  
